--- a/Always On Server/manifest.json
+++ b/Always On Server/manifest.json
@@ -1,7 +1,7 @@
 {
   "Name": "Stardew Multiplayer Server",
-  "Author": "funny-snek & Zuberii & moy",
-  "Version": "1.0.5",
+  "Author": "funny-snek & Zuberii & moy & Linloir",
+  "Version": "1.0.7",
   "Description": "A Headless server mod.",
   "UniqueID": "moy.Always_On_Server",
   "EntryDll": "Stardew-Multiplayer-Server.dll",
